<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:background="@drawable/img_box_chat"
            android:id="@+id/imaBackground"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center" >
            <TextView
                android:layout_margin="40dp"
                android:text="@string/help"
                android:lines="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imaBackground"
            android:layout_gravity="center"
            android:src="@drawable/ic_app" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/llMedia"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/hashtag_color"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/fragment_chat_imgPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_play" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/fragment_chat_imgPlay"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tvNameSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/fragment_chat_imgClose"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

    <ListView
        android:id="@+id/fragment_chat_lvMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" />
    <com.romainpiel.shimmer.ShimmerTextView
        android:visibility="gone"
        android:id="@+id/tvWaiting"
        android:text="@string/tra_loi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/item_me"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>
    <!--<TextView-->
        <!--android:id="@+id/tvWaiting"-->
        <!--android:visibility="gone"-->
        <!--android:layout_gravity="center"-->
        <!--android:text="@string/tra_loi"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->
    <LinearLayout
        android:id="@+id/llChat"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="2dp"
        android:background="@drawable/boder_edt"
        android:orientation="horizontal"
        android:weightSum="6">

        <EditText
            android:id="@+id/fragment_chat_edtMessages"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/transparent"
            android:hint="@string/viet_tin_nhan"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textColor="@color/text_msg_input" />

        <ImageView
            android:id="@+id/fragment_chat_imgSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_send"
            android:text="@string/btn_send"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
